# file_question_awnser_agent

./: .pre-commit-config.yaml  CLAUDE.md  FOR ERFAN.md  HEXAGONAL_ARCHITECTURE.md  README.md  docker-compose.yml
Project Reports/: COMPLETION_CHECKLIST.md  PROJECT_STATUS_REPORT.md
backend/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/chat/: serializers.py  urls.py
backend/config/: settings.py  urls.py  wsgi.py
backend/core/: dependencies.py
backend/core/application/dto/: chat_dto.py  document_dto.py
backend/core/application/ports/repositories/: chat_repository.py  chunk_repository.py  document_repository.py
backend/core/application/ports/services/: embedding_service.py  llm_service.py  rag_service.py  text_extractor.py
backend/core/application/use_cases/: ask_question.py  process_document.py  upload_document.py
backend/core/domain/: exceptions.py
backend/core/domain/entities/: chat.py  chunk.py  document.py
backend/core/domain/value_objects/: document_status.py  embedding.py  file_type.py
backend/core/infrastructure/adapters/rag/: langgraph_rag_service.py
backend/core/infrastructure/adapters/repositories/: django_chat_repository.py  django_chunk_repository.py  django_document_repository.py
backend/core/infrastructure/adapters/services/: docx_text_extractor.py  gemini_embedding_service.py  gemini_llm_service.py  pdf_text_extractor.py  txt_text_extractor.py
backend/documents/: admin.py  models.py  tests.py  views.py
backend/documents/migrations/: 0001_initial.py
backend/evaluation/: admin.py  models.py  serializers.py  urls.py  views.py
backend/fixtures/: test_queries.json
backend/notebooks/: 01_document_ingestion.ipynb  02_question_answering.ipynb  03_utility_functions.ipynb
backend/rag/: services.py
backend/src/: config.py  vectorstore.py
backend/tests/: conftest.py  test_chat.py  test_documents.py  test_domain.py  test_evaluation.py  test_rag.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ChatInterface.css  ChatInterface.js  DocumentList.css  DocumentList.js
frontend/src/services/: api.js
v1/backend/src/: ingestion.py  vectorstore.py
v1/frontend/: streamlit_app.py
v2/: .dockerignore  README.md  docker-compose.yml
v2/backend/: .gitignore  Dockerfile  requirements.txt
v2/backend/app/: main.py
v2/backend/test/: test_api.py  test_services.py
v2/frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.js
v3/: 01_document_ingestion.ipynb  Dockerfile  TESTING_GUIDE.md  bm25_retriever.py  conftest.py  docker-compose.yml  helpers.py  main.py  orchestrator.py  reasoning_agent.py  requirements.txt  reranker.py  settings.py  streamlit_app.py  utility_agent.py  vector_retriever.py
v3/document-qa-system/: DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
v3/document-qa-system/src/: __init__.py
v3/document-qa-system/src/agents/: __init__.py  retriever_agent.py
v3/document-qa-system/src/document_processing/: chunker.py  indexer.py  loader.py
v3/document-qa-system/src/models/: __init__.py  schemas.py
v3/document-qa-system/src/retrieval/: __init__.py  hybrid_search.py
v3/document-qa-system/tests/: test_utils.py
v3/document-qa-system/ui/: __init__.py
v4/: ARCHITECTURE.md  App.css  App.js  ChatInterface.css  ChatInterface.js  DEPLOYMENT.md  Dockerfile  DocumentList.css  DocumentList.js  PROJECT_SUMMARY.md  README.md  TESTING.md  admin.py  agents.py  api.js  conftest.py  docker-compose.yml  index.html  init_test_queries.py  models.py  nginx.conf  package.json  pytest.ini  requirements.txt  retrieval.py  serializers.py  services.py  settings.py  setup.sh  start.sh  test_queries.json  tests.py  views.py
v5 - Copy/intelligent-doc-qa/: ARCHITECTURE.md  PROJECT_SUMMARY.md  docker-compose.yml
v5/intelligent-doc-qa/: README.md  docker-compose.yml
(+63 files in other folders)
