[project]
name = "intelligent-doc-qa"
version = "0.1.0"
description = "Intelligent Document Question Answering System with Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Django Core
    "django>=5.0.0,<6.0.0",
    "djangorestframework>=3.14.0,<4.0.0",
    "django-cors-headers>=4.3.1,<5.0.0",
    "python-decouple>=3.8,<4.0",

    # Database
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pgvector>=0.2.4,<1.0.0",

    # LangChain & LangGraph
    "langchain>=0.1.0,<1.0.0",
    "langchain-google-genai>=0.0.6,<1.0.0",
    "langgraph>=0.0.20,<1.0.0",
    "langchain-community>=0.0.10,<1.0.0",

    # Google AI
    "google-generativeai>=0.3.2,<1.0.0",
    "google-cloud-vision>=3.5.0,<4.0.0",

    # Document Processing
    "pypdf2>=3.0.1,<4.0.0",
    "pdfplumber>=0.10.3,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "pillow>=10.1.0,<11.0.0",

    # Vector Search & Retrieval
    "numpy>=1.26.2,<2.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "rank-bm25>=0.2.2,<1.0.0",

    # Utilities
    "python-magic>=0.4.27,<1.0.0",
    "tqdm>=4.66.1,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3,<8.0.0",
    "pytest-django>=4.7.0,<5.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "factory-boy>=3.3.0,<4.0.0",

    # Code Quality
    "black>=23.12.1,<24.0.0",
    "isort>=5.13.2,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "chat", "config", "core", "documents", "evaluation", "rag"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-django>=4.7.0,<5.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "black>=23.12.1,<24.0.0",
    "isort>=5.13.2,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]
